<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#D9D9D9"
    android:layout_height="match_parent"
    tools:context=".AddStoryAction">

    <EditText
        android:id="@+id/etTitle"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterTitle"
        android:inputType="text"
        android:maxLength="20"

        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/etsubtitle"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sub_title"
        android:inputType="text"
        android:maxLength="25"
        android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        />
    <EditText
        android:id="@+id/etdescripation"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textColorHint="#787878"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_descrpition"
        android:inputType="textMultiLine"
        android:lines="6"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="top|start"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etsubtitle"
        />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_story"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:background="@color/teal_200"
        app:backgroundTint="@color/teal_200"
        android:backgroundTintMode="add"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>